--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CS330PZAnteaPrimorac5157"
+        android:name=".App"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
