- updated AppHiltModule and TestAppModule on the go - added repository interface, implementation and tests - added authentication mapper, domain class Authentication, - fixed BASE_URL in Constants - added AccountViewModel impl and test - updated MainActivity and test - updated NavigationRoutesTest added robolectic (commented out for now) just in case I need it later - extracted AccountViewModel's interface - created fake AccountViewModel - added AccountScreen and tests - refactored existing tests

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ coroutines-test = "1.6.0"
 okhttp = "4.11.0"
 gson = "2.10.1"
 mockk = "1.12.5"
+robolectric = "4.7.3"
 hilt = "2.48"
 hilt-navigation-compose = "1.1.0"
 
@@ -78,6 +79,7 @@ coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 mockwebserver = { group = "com.squareup.okhttp3", name = "mockwebserver", version.ref = "mockwebserver" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
